# repositories-listing

./: .bandit  .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  LICENSE  monkeytype.sqlite3  mypy.ini  pylintrc  pyproject.toml
repositoriesList/: GithubRepos.py  GitlabRepos.py  SaveRepos.py  main.py
repositoriesList/output/: github_repositories.txt  gitlab_repositories.txt
tests/: tests.py
